# Eurobot-2013

./: .gitignore  README.rst
AX_12_dsPIC33F.X/: atp-user.h  atp.h  ax12.c  main.c  main.c~  user-interrupts.c
Altium/: .gitignore  Asserv_2.PcbDoc  Beacon.PcbDoc  Mother.DWG  MotherBoard1.SchDoc  Mother_2.PcbDoc  PCB1.PcbDoc  ascenseur-asserv.SchDoc  ascenseur-motors.SchDoc  ascenseur.PcbDoc  ascenseur.PrjPCB  asserv1.DWG  asserv1.PcbDoc  asserv1.PrjPCB  asserv1.PrjPCBStructure  asserv1.SchDoc  beacon1.PrjPCB  beacon1.PrjPCBStructure  beacon1.SchDoc  dev1.PrjPCB  dev1.PrjPCBStructure  dev1.SchDoc  emitter.SchDoc  emitters1.SchDoc  mother1-pic.SchDoc  mother1-pic.SchDocPreview  mother1-pic2.SchDoc  mother1-picCapteur.SchDoc  mother1-picFacade.SchDoc  mother1.PcbDoc  mother1.PcbDoc.htm  mother1.PcbDocPreview  mother1.PrjPCB  mother1.PrjPCBStructure  mother1.SchDoc  mother1.SchDocPreview  motors1-bridge.SchDoc  motors1.PcbDoc  motors1.PrjPcb  motors1.PrjPcbStructure  (+16 more)
Asserv/: AsservUser-interrupts.c  Calcul PWM.txt
Asserv.X/: AsservHeader.h  AsservMain.c  AsservUser-interrupts.c  Asserv_fonction.c  atp-asserv.c  atp-asserv.h  atp-user.h  atp.h  calcul_sin.c  calcul_sin.h  calculs_position.c  lut.h  moteurs.c
Bras_AX12/: Bras_fonctions.c  atp-ax.c  atp-ax.h  atp-user.h  atp.c  ax12-old.c  ax12.c  (+4 more)
Bras_AX12.X/: ax12.c  main.c  user-interrupts.c
vision/balise2/jni/: Android.mk  CMakeLists.txt  candlecolors.cpp  candlecolors.h  computefeaturepoints.cpp  computefeaturepoints.h  computehomography.cpp  computehomography.h  main.cpp  matchdescriptors.cpp  matchdescriptors.h
(+153 files in other folders)
